# dead

./: .clangd  .gitignore  CMakeLists.txt  dead_quote_gen.py  main.cpp  run.sh  test_build.sh
lib/: CMakeLists.txt
lib/include/: DEAD_bullet.h  DEAD_bullet_director.h  DEAD_bullets.h  DEAD_collision_director.h  DEAD_controllable_player.h  DEAD_data_base_connector.h  DEAD_decoration_layer.h  DEAD_decoration_layer_builder.h  DEAD_entity.h  DEAD_filepaths.h  DEAD_functions.h  DEAD_game.h  DEAD_game_builder.h  DEAD_gun.h  DEAD_guns.h  DEAD_item.h  DEAD_item_drop.h  DEAD_item_drop_layer.h  DEAD_map.h  DEAD_map_spawner.h  DEAD_normal_bullet.h  DEAD_particle_renderer.h  DEAD_pistol.h  DEAD_player.h  DEAD_player_builder.h  DEAD_player_inventory.h  DEAD_player_inventory_renderer.h  DEAD_renderer.h  DEAD_renderer3d.h  DEAD_shotgun.h  DEAD_sound_director.h  DEAD_ui_director.h  DEAD_ui_renderer.h  DEAD_weapon.h  DEAD_zombie_director.h  DEAD_zombie_movement_maps.h
lib/include/bullets/: DEAD_bullet.h  DEAD_normal_bullet.h
lib/include/decorations/: DEAD_decoration_base.h  DEAD_pile_of_paper.h
lib/include/guns/: DEAD_gun.h  DEAD_pistol.h  DEAD_shotgun.h
lib/include/hitbox/: DEAD_circle_hitbox.h  DEAD_hitbox.h  DEAD_rect_hitbox.h
lib/include/items/: DEAD_house_key.h  DEAD_item.h
lib/include/labels/: DEAD_label_base.h  DEAD_point_label.h
lib/include/map_objects/: DEAD_air.h  DEAD_cursed_dirt.h  DEAD_door.h  DEAD_floor.h  DEAD_map_object_base.h  DEAD_mid_road.h  DEAD_multitexture_object_base.h  DEAD_player_memorable_object_interface.h  DEAD_player_memoriable_object.h  DEAD_point.h  DEAD_road.h  DEAD_stone.h  DEAD_wood.h
lib/include/particles/: DEAD_particle_base.h  DEAD_sword_attack_particle.h
lib/include/player_input_method/: DEAD_player_input_method.h  DEAD_player_input_method_2d.h  DEAD_player_input_method_3d.h
lib/include/subrenderers/: DEAD_decoration_renderer.h  DEAD_explainer.h  DEAD_label_renderer.h  DEAD_particle_renderer.h  DEAD_player_inventory_renderer.h  DEAD_shadow_caster.h  DEAD_subrenderer_base.h  DEAD_ui_renderer.h
lib/include/ui/: DEAD_magazine_ui.h  DEAD_player_health_ui.h  DEAD_ui.h  DEAD_value_bar_ui_element.h  DEAD_zombie_indicator_ui.h
lib/include/weapons/: DEAD_bat.h
lib/include/zombies/: DEAD_zombie.h
lib/src/: DEAD_bullet.cpp  DEAD_bullet_director.cpp  DEAD_collision_director.cpp  DEAD_controllable_player.cpp  DEAD_data_base_connector.cpp  DEAD_decoration_layer.cpp  DEAD_decoration_layer_builder.cpp  DEAD_entity.cpp  DEAD_filepaths.cpp  DEAD_functions.cpp  DEAD_game.cpp  DEAD_game_builder.cpp  DEAD_gun.cpp  DEAD_guns.cpp  DEAD_item.cpp  DEAD_item_drop.cpp  DEAD_item_drop_layer.cpp  DEAD_map.cpp  DEAD_map_spawner.cpp  DEAD_normal_bullet.cpp  DEAD_particle_renderer.cpp  DEAD_pistol.cpp  DEAD_player.cpp  DEAD_player_inventory.cpp  DEAD_player_inventory_renderer.cpp  DEAD_renderer.cpp  DEAD_renderer3d.cpp  DEAD_shotgun.cpp  DEAD_sound_director.cpp  DEAD_ui_director.cpp  DEAD_ui_renderer.cpp  DEAD_weapon.cpp  DEAD_zombie_director.cpp  DEAD_zombie_movement_maps.cpp
lib/src/bullets/: DEAD_bullet.cpp  DEAD_normal_bullet.cpp
lib/src/decorations/: DEAD_decoration_base.cpp  DEAD_pile_of_paper.cpp
lib/src/guns/: DEAD_gun.cpp  DEAD_pistol.cpp  DEAD_shotgun.cpp
lib/src/hitbox/: DEAD_circle_hitbox.cpp  DEAD_hitbox.cpp  DEAD_rect_hitbox.cpp
lib/src/items/: DEAD_house_key.cpp  DEAD_item.cpp
lib/src/labels/: DEAD_label_base.cpp  DEAD_point_label.cpp
lib/src/map_objects/: DEAD_air.cpp  DEAD_cursed_dirt.cpp  DEAD_door.cpp  (+9 more)
(+32 files in other folders)
